# ConceptPilot

./: .gitignore  ABOUT.md  BACKEND_REMAINING_WORK.md  CanvasRoadmap.md  frontendspecs.md  mainprd.md  missingbackend.md  package-lock.json  technicalprd.md  validate_env.py
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 75cc9c04410b_initial_schema.py  96c23dd5a332_add_canvas_tables.py  9b61f5c4a0fb_merge_canvas_workspaces_and_chat_.py  b8c9d0e1f2a3_student_workspaces_drop_legacy_seed.py  c4d5e6f7a8b9_add_study_content_and_exam_state.py  d5e6f7a8b9c0_add_minimal_projects_and_study_content_project_fk.py  e6f7a8b9c0d1_add_canvas_workspaces.py  f1a2b3c4d5e6_hackathon_shared_student_seed.py  f7a8b9c0d1e2_add_chat_session_surface.py
backend/app/: config.py  database.py  main.py  rate_limit.py
backend/app/middleware/: observability.py
backend/app/models/: canvas.py  models.py
backend/app/routers/: ai_suggestions.py  canvas.py  canvas_workspaces.py  chat.py  clusters.py  compute.py  courses.py  dashboard.py  elevenlabs_api.py  exams.py  export.py  graph.py  parameters.py  projects.py  reports.py  student.py  study_content.py  upload.py
backend/deploy/: setup-vultr.sh
backend/scripts/: export_openapi.py
backend/tests/: conftest.py  test_chat.py  test_compute_queue_service.py  test_integration_flow.py  test_openapi_contract.py  test_p0_hardening.py  test_prd_fidelity.py  test_rate_limit.py  test_student_canvas_workspace.py  test_study_content.py  test_text_sanitize.py
(+150 files in other folders)
