[project]
name = "conceptpilot-backend"
version = "0.1.0"
description = "ConceptPilot FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "sqlalchemy[asyncio]==2.0.36",
  "asyncpg==0.30.0",
  "alembic==1.14.1",
  "pydantic-settings==2.7.1",
  "python-multipart==0.0.20",
  "pandas==2.2.3",
  "numpy==2.2.1",
  "networkx==3.4.2",
  "scikit-learn==1.6.1",
  "python-dotenv==1.0.1",
  "anthropic==0.49.0",
  "httpx==0.28.1",
  "pytest==8.3.4",
  "pytest-asyncio==0.25.3",
  "aiosqlite==0.21.0",
  "structlog==25.1.0",
  "boto3==1.35.36",
  "redis==7.3.0",
]

[tool.uv]
dev-dependencies = []
